--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     },
     "homepage": "https://github.com/longbuibao/taskApp#readme",
     "dependencies": {
-        "mongodb": "^3.6.6"
+        "mongodb": "^3.6.6",
+        "mongoose": "^5.12.8",
+        "validator": "^13.6.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
