--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "runDev": "nodemon mongodb.js"
+        "dev": "nodemon ./src/index.js"
     },
     "repository": {
         "type": "git",
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/longbuibao/taskApp#readme",
     "dependencies": {
+        "express": "^4.17.1",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.8",
         "validator": "^13.6.0"
