--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/longbuibao/taskApp#readme",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "express": "^4.17.1",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.8",
