--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "bcrypt": "^5.0.1",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.8",
         "validator": "^13.6.0"
