--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/longbuibao/taskApp#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.6",
