--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.8",
         "multer": "^1.4.2",
+        "nodemailer": "^6.6.1",
         "sharp": "^0.28.3",
         "validator": "^13.6.0"
     },
