--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "homepage": "https://github.com/longbuibao/taskApp#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
-        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mime-types": "^2.1.30",
@@ -31,6 +30,7 @@
         "validator": "^13.6.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "dotenv": "^10.0.0"
     }
 }
