--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node ./src/index.js",
-        "dev": "nodemon ./src/index.js"
+        "dev": " nodemon -r dotenv/config ./src/index.js"
     },
     "repository": {
         "type": "git",
