--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node ./src/index.js",
-        "dev": "nodemon ./src/index.js"
+        "dev": " nodemon -r dotenv/config ./src/index.js",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -31,7 +32,8 @@
         "validator": "^13.6.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.7",
-        "dotenv": "^10.0.0"
+        "dotenv": "^10.0.0",
+        "jest": "^27.0.1",
+        "nodemon": "^2.0.7"
     }
 }
