--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "main": "index.js",
     "scripts": {
         "start": "node ./src/index.js",
-        "dev": " nodemon -r dotenv/config ./src/index.js",
-        "test": "jest"
+        "dev": " nodemon -r dotenv/config ./src/index.js dotenv_config_path=./test.env",
+        "test": "jest --watch --runInBand --setupFiles dotenv/config ./test.env"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/longbuibao/taskApp.git"
+    },
+    "jest": {
+        "testEnvironment": "node"
     },
     "keywords": [],
     "author": "",
@@ -34,6 +37,7 @@
     "devDependencies": {
         "dotenv": "^10.0.0",
         "jest": "^27.0.1",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "supertest": "^6.1.3"
     }
 }
