--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node ./src/index.js",
-        "dev": " nodemon -r dotenv/config ./src/index.js dotenv_config_path=./test.env",
+        "start": "node index.js",
+        "dev": " nodemon -r dotenv/config index.js dotenv_config_path=./.env",
         "test": "jest --watch --runInBand --setupFiles dotenv/config ./test.env"
     },
     "repository": {
@@ -24,6 +24,9 @@
     "homepage": "https://github.com/longbuibao/taskApp#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
+        "ejs": "^3.1.6",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mime-types": "^2.1.30",
